# Code-Wizard

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
docs/hackathon/: problem-statement.txt
env/: __init__.py  data.py  env.py  grader.py  models.py  reward.py  tasks.py
scripts/: validate-submission.sh
server/: __init__.py  app.py
